--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
-    <title> bootstrap  </title>
+    <title> strap  </title>
 </head>
 
 <body>
